[package]
name = "enviro"
version = "0.1.0"
authors = ["Matthias Wolf <m@sushinara.net>"]
edition = "2018"

[dependencies]
bme280 = "0.2.1"
embedded-graphics = "0.7.0-alpha.2"
embedded-hal = "*"
gpio-cdev = "*"
st7735-lcd = "0.8.0-alpha.1"
profont = "0.3.0"
serialport = "3.3.0"
systemstat = "0.1.6"

[dependencies.linux-embedded-hal]
version = "0.3"
features = ["gpio_cdev"]
git = "https://github.com/rust-embedded/linux-embedded-hal.git"

[dependencies.pms5003]
git = "https://github.com/matz-e/pms5003.rs.git"
branch = "main"
